[WK2] LayerTreeCoordinator can disallow tile updates in forceRepaint https://bugs.webkit.org/show_bug.cgi?id=93077

Reviewed by Jocelyn Turcotte.

Force tile updates when doing a forced repaint.

* WebProcess/WebPage/LayerTreeCoordinator/LayerTreeCoordinator.cpp:
(WebKit::LayerTreeCoordinator::LayerTreeCoordinator):
(WebKit::LayerTreeCoordinator::forceRepaint):
(WebKit::LayerTreeCoordinator::layerTreeTileUpdatesAllowed):
* WebProcess/WebPage/LayerTreeCoordinator/LayerTreeCoordinator.h:
(LayerTreeCoordinator):

Canonical link: https://commits.webkit.org/110949@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@124603 268f45cc-cd09-0410-ab3c-d52691b4dbfc